Fixed word wrap issue and fixed the issue where long words would move the tweet container on 'desktop version'

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -70,7 +70,7 @@
 
 
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1220px) {
   nav {
     height: 90px;
     width: 100%;
@@ -83,22 +83,23 @@
   }
 
   body {
-    margin-top: 120px;
+    margin-top: 10vh;
   }
 
   .profile {
-    height: 10%;
+    height: 50vh;
     width: 18em;
     background-color: #407CB8;
     background-image: url("https://www.transparenttextures.com/patterns/gplay.png");
     background-size: 2em 2em;
-    float: left;
     padding-top: 1.5em;
-
   }
 
   main {
-    float: right;
+    position: relative;
+    top: -50vh;
+    left: 17em;
+    width: 36em;
   }
 
   span {
@@ -108,10 +109,11 @@
     font-family: "Bungee", cursive;
   }
 
-  a {
+  a.tweet-text {
     margin-right: 1.5em;
     margin-top: 1.5em;
     margin-bottom: 1.5em;
+    overflow-wrap: anywhere;
   }
 
   ul {
